--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,4 @@ include ':app:weatheratation'
 include ':p02_observer'
 include ':p02_observable'
 include ':p03_decorator_starbuzz'
+include ':p03_io'
