--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,4 @@ include ':p02_observer'
 include ':p02_observable'
 include ':p03_decorator_starbuzz'
 include ':p03_io'
+include ':p04_factory_simple_pizza'
