--- a/settings.gradle
+++ b/settings.gradle
@@ -6,3 +6,4 @@ include ':p02_observable'
 include ':p03_decorator_starbuzz'
 include ':p03_io'
 include ':p04_factory_simple_pizza'
+include ':p04_factory_method'
