--- a/settings.gradle
+++ b/settings.gradle
@@ -7,3 +7,4 @@ include ':p03_decorator_starbuzz'
 include ':p03_io'
 include ':p04_factory_simple_pizza'
 include ':p04_factory_method'
+include ':p04_factory_abstract'
