--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,4 @@ include ':p03_io'
 include ':p04_factory_simple_pizza'
 include ':p04_factory_method'
 include ':p04_factory_abstract'
+include ':p05_singleton_classic'
