add p06 command simple remote

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,3 +9,5 @@ include ':p04_factory_simple_pizza'
 include ':p04_factory_method'
 include ':p04_factory_abstract'
 include ':p05_singleton_classic'
+include ':p06_command_simple_remote_wl'
+include ':p06_command_simple_remote'
