add p06 command simple remote wl

--- a/settings.gradle
+++ b/settings.gradle
@@ -11,3 +11,4 @@ include ':p04_factory_abstract'
 include ':p05_singleton_classic'
 include ':p06_command_simple_remote_wl'
 include ':p06_command_simple_remote'
+include ':p06_command_remote_control'
